# server/go/docs/swagger.json
@@ -12,6 +12,46 @@
     "host": "localhost:5000",
     "basePath": "/",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "メールアドレスとパスワードを用いてログイン処理を行う",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "ログインAPI",
+                "parameters": [
+                    {
+                        "description": "メールアドレス, パスワード",
+                        "name": "LoginForm",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.LoginForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "400": {
+                        "description": "パラメータが不正",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "500": {
+                        "description": "サーバー内エラー",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "メールアドレスとパスワードを用いてユーザーを登録する",
@@ -54,6 +94,21 @@
         }
     },
     "definitions": {
+        "controller.LoginForm": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.RegisterForm": {
             "type": "object",
             "required": [
