# server/go/main.go
@@ -1,6 +1,8 @@
 package main
 
 import (
+	"github.com/gin-contrib/sessions"
+	"github.com/gin-contrib/sessions/memstore"
 	"github.com/gin-gonic/gin"
 
 	swaggerFiles "github.com/swaggo/files"
@@ -21,10 +23,14 @@ import (
 func main() {
 	engine := gin.Default()
 
+	store := memstore.NewStore([]byte("secret"))
+	engine.Use(sessions.Sessions("mysession", store))
+
 	// swagger
 	url := ginSwagger.URL("http://localhost:5000/swagger/doc.json")
 	engine.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 
 	engine.POST("/register", controller.Register)
+	engine.POST("/login", controller.Login)
 	engine.Run(":5000")
 }
