# server/go/model/user.go
@@ -1,0 +1,7 @@
+package model
+
+type User struct {
+	Id             int    `db:"id"`
+	Email          string `db:"email"`
+	HashedPassword []byte `db:"password"`
+}
